--- a/digital-burette.html
+++ b/digital-burette.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=https://jticorp.sharepoint.com/:b:/r/sites/IDNSUB02-DOCUMENTSYSTEM/Internal%20Documents/10.%20Klausul%20Panduan%20Mutu/Klausul%206.4-Peralatan/IK-05.02-062.05-6.4-04%20Operasional%20Digital%20Burette.pdf?csf=1&web=1&e=abc123" />
+    <meta http-equiv="refresh" content="0;url=https://jticorp.sharepoint.com/:b:/r/teams/ChemicalLab/Shared%20Documents/General/29.%20IMS/1.%2004-04-2022/IK-05.02-061.02%20Operasional%20Digital%20Burette.pdf?csf=1&web=1&e=LVKYQN" />
   </head>
   <body>
     <p>Redirecting to IK-05.02-062.05-6.4-04 Operasional Digital Burette...</p>
